<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/brown2"
    tools:context=".ReservationDetailActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/soho"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_reservation"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:background="@color/yellow"
            android:text=""
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:id="@+id/name_input"/>
    </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:background="@color/yellow"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="17sp"
            android:text="@string/date_of_reservation"
            android:id="@+id/date_input"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_weight="0.6"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:hint="@string/how_many_people"
                android:inputType="number"
                android:text=""
                android:background="@color/yellow"
                android:id="@+id/amount_input"
                android:textSize="18sp"
                android:padding="15dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/vegan"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:padding="15dp"
            android:textSize="18sp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/vegan_check"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:id="@+id/reservation_sits_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/reserve_sits"
        android:textAllCaps="false"
        android:textSize="30sp"/>



</LinearLayout>