<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="@color/black">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:layout_constraintEnd_toEndOf="@id/card_view"
        android:text="@string/ok"
        android:id="@+id/ok_btn"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/card_view"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/pink_batata"
        android:gravity="center"
        android:id="@+id/input"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:cardCornerRadius="30dp"
        android:id="@+id/card_view"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/input"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/pink_batata_sushi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_height="match_parent"
                android:text="@string/pink_batata_description"
                android:textColor="@color/black"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/price_20"
                android:gravity="center"
                android:textSize="50sp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>