<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:textSize="70sp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/food_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/typhon_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/typhon_sushi" />

        <ImageView
            android:id="@+id/hurrican_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/hurrican" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/typhon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/typhon" />

        <TextView
            android:id="@+id/hurrican_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/hurrican" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pink_batata_img"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/pink_batata_sushi" />

        <ImageView
            android:id="@+id/saka_maki_img"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/saka_maki" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pink_batata_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/pink_batata" />

        <TextView
            android:id="@+id/saka_maki_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/saka_maki" />
    </LinearLayout>
</LinearLayout>