<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/brown1"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:textSize="65sp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/drink_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/strawberry_margarita_img"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:scaleType="fitCenter"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/strawberry_margarita" />

        <ImageView
            android:id="@+id/blueberry_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@drawable/blueberry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/strawberry_margarita_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/strawberry_margarita" />

        <TextView
            android:id="@+id/blueberry_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/blueberry_rum" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/green_gin_img"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:layout_weight="1"
            android:src="@drawable/green_jin" />

        <ImageView
            android:id="@+id/long_island_img"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:scaleType="fitStart"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/long_island" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/green_gin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/green_gin" />

        <TextView
            android:id="@+id/long_island_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/long_island" />
    </LinearLayout>
</LinearLayout>