<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <ImageView
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/soho_logo"
            app:srcCompat="@drawable/soho"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/brown1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                android:id="@+id/food_menu_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                app:iconSize="50sp"
                app:icon="@drawable/ic_baseline_dining_24"
                android:text="@string/food_menu"
                android:textAllCaps="false"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/brown2"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                android:id="@+id/drink_menu_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                app:iconSize="50sp"
                app:icon="@drawable/ic_baseline_local_drink_24"
                android:text="@string/drink_menu"
                android:textAllCaps="false"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brown3"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:id="@+id/reserve_detail_btn"
                app:iconSize="50sp"
                app:icon="@drawable/ic_baseline_groups_24"
                android:text="@string/reserve_detail"
                android:textAllCaps="false"
                android:textSize="30sp"/>
        </LinearLayout>
    </LinearLayout>